force-app/main/default/objects/Centrum_Care__c/Centrum_Care__c.object-meta.xml
<CustomObject>
    <label>Five Star Feedback</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Five Star Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>