force-app/main/default/objects/Centrum_Care__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>DESCRIPTION</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>