force-app/main/default/objects/Centrum_Care__c/fields/Module_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Module_Related_to__c</fullName>
    <label>Module (Related to)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Login</fullName>
            </value>
            <value>
                <fullName>FIVB</fullName>
            </value>
            <value>
                <fullName>FIVC</fullName>
            </value>
            <value>
                <fullName>Online EC</fullName>
            </value>
            <value>
                <fullName>In-Principle Sanction</fullName>
            </value>
            <value>
                <fullName>Lead Details</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
            <value>
                <fullName>Legal Opinion</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
            <value>
                <fullName>Legal Approval</fullName>
            </value>
            <value>
                <fullName>Final Sanction</fullName>
            </value>
            <value>
                <fullName>Post Approval</fullName>
            </value>
            <value>
                <fullName>MOD Registration</fullName>
            </value>
            <value>
                <fullName>Agreement Execution</fullName>
            </value>
            <value>
                <fullName>DOS Condition</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>DOS Receipt</fullName>
            </value>
            <value>
                <fullName>Disbursal Maker</fullName>
            </value>
            <value>
                <fullName>Disbursal Author</fullName>
            </value>
            <value>
                <fullName>Document Referral</fullName>
            </value>
            <value>
                <fullName>Custody</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Account Details</fullName>
                <isActive>false</isActive>
                <label>Account Details</label>
            </value>
            <value>
                <fullName>Bank &amp; Demat</fullName>
                <isActive>false</isActive>
                <label>Bank &amp; Demat</label>
            </value>
            <value>
                <fullName>CSV Upload</fullName>
                <isActive>false</isActive>
                <label>CSV Upload</label>
            </value>
            <value>
                <fullName>Calendar</fullName>
                <isActive>false</isActive>
                <label>Calendar</label>
            </value>
            <value>
                <fullName>Cases</fullName>
                <isActive>false</isActive>
                <label>Cases</label>
            </value>
            <value>
                <fullName>Client</fullName>
                <isActive>false</isActive>
                <label>Client</label>
            </value>
            <value>
                <fullName>Contact Management</fullName>
                <isActive>false</isActive>
                <label>Contact Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>