force-app/main/default/objects/Centrum_Care__c/fields/NEED_DISCUSSION__c.field-meta.xml
<CustomField>
    <fullName>NEED_DISCUSSION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEED DISCUSSION</label>
    <type>Checkbox</type>
</CustomField>