force-app/main/default/objects/Centrum_Care__c/fields/PRIORITY__c.field-meta.xml
<CustomField>
    <fullName>PRIORITY__c</fullName>
    <label>PRIORITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>