force-app/main/default/objects/Centrum_Care__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Five Star</fullName>
                <default>true</default>
                <label>Five Star</label>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>