force-app/main/default/objects/Centrum_Care__c/fields/Raised_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Name__c</fullName>
    <label>Raised By (Name)</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>