force-app/main/default/objects/Centrum_Care__c/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <label>STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Not a Bug</fullName>
            </value>
            <value>
                <fullName>Under Testing</fullName>
            </value>
            <value>
                <fullName>Deployed in Pre-UAT</fullName>
            </value>
            <value>
                <fullName>Moved to Phase 2</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Taken-up in UAT</fullName>
                <isActive>false</isActive>
                <label>Taken-up in UAT</label>
            </value>
            <value>
                <fullName>Validated by Centrum Business</fullName>
                <isActive>false</isActive>
                <label>Validated by Centrum Business</label>
            </value>
            <value>
                <fullName>Waiting for Response From User</fullName>
                <isActive>false</isActive>
                <label>Waiting for Response From User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>