force-app/main/default/objects/Centrum_Care__c/fields/SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT__c</fullName>
    <label>SUBJECT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>