force-app/main/default/objects/Centrum_Care__c/fields/TESTCASE_REF__c.field-meta.xml
<CustomField>
    <fullName>TESTCASE_REF__c</fullName>
    <label>TESTCASE REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>