force-app/main/default/objects/Centrum_Care__c/fields/TICKET_CLOSED_DATE__c.field-meta.xml
<CustomField>
    <fullName>TICKET_CLOSED_DATE__c</fullName>
    <label>TICKET CLOSED DATE</label>
    <type>DateTime</type>
</CustomField>