force-app/main/default/objects/Centrum_Care__c/fields/Ticket_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reference_ID__c</fullName>
    <displayFormat>Ticket-{0000}</displayFormat>
    <label>Ticket Reference ID</label>
    <type>AutoNumber</type>
</CustomField>