force-app/main/default/objects/Centrum_Care__c/fields/TICKET_VERIFICATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>TICKET_VERIFICATION_DATE__c</fullName>
    <label>TICKET VERIFICATION DATE</label>
    <type>DateTime</type>
</CustomField>