force-app/main/default/objects/Centrum_Care__c/fields/TMC_OWNERSHIP__c.field-meta.xml
<CustomField>
    <fullName>TMC_OWNERSHIP__c</fullName>
    <label>TMC OWNERSHIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>