force-app/main/default/objects/Centrum_Care__c/fields/TMC_REMARK__c.field-meta.xml
<CustomField>
    <fullName>TMC_REMARK__c</fullName>
    <label>TMC REMARK</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>