force-app/main/default/objects/Centrum_Care__c/fields/TMC_Status__c.field-meta.xml
<CustomField>
    <fullName>TMC_Status__c</fullName>
    <label>TMC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Not a Bug</fullName>
                <isActive>false</isActive>
                <label>Not a Bug</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>