force-app/main/default/objects/Centrum_Care__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TYPE__c</columns>
    <columns>STATUS__c</columns>
    <columns>TICKET_CLOSED_DATE__c</columns>
    <columns>TMC_OWNERSHIP__c</columns>
    <columns>Module_Related_to__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>