force-app/main/default/objects/Centrum_Care__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>Module_Related_to__c</columns>
    <columns>SEVERITY__c</columns>
    <columns>STATUS__c</columns>
    <columns>TMC_OWNERSHIP__c</columns>
    <columns>TMC_REMARK__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TICKET_CLOSED_DATE__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>