force-app/main/default/objects/Centrum_Care__c/listViews/Todays_s_Work.listView-meta.xml
<ListView>
    <fullName>Todays_s_Work</fullName>
    <columns>NAME</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>NEED_DISCUSSION__c</columns>
    <columns>TYPE__c</columns>
    <columns>STATUS__c</columns>
    <columns>TICKET_CLOSED_DATE__c</columns>
    <columns>TMC_OWNERSHIP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Work</label>
</ListView>